# s2p

./: .coveragerc  .editorconfig  .gitignore  .gitmodules  .travis.general.yml  .travis.linux.yml  .travis.osx.yml  .travis.yml  Dockerfile  HACKERS  Jenkinsfile  MANIFEST.in  README.md  config.json.example  main_script.py  main_script_old.py  main_script_pairs.py  main_script_pairs2.py  main_script_pairs_std.py  makefile  micmac_params.xml  s2p.py  s2p_mosaic.py  s2p_test.py  setup.cfg  setup.py  test.json  test_1.json  test_4.json  test_small.json  tile_composer.py
c/: DMS.cpp  GeoCoords.cpp  Geoid.cpp  MGRS.cpp  Makefile  PolarStereographic.cpp  TransverseMercator.cpp  UTMUPS.cpp  abstract_dsf.c  abstract_dsf.h  backflow.c  bdint.c  bdint5pc.cc  bicubic.c  bicubic_gray.c  bilinear_interpolation.c  bin2asc.c  bin2asc2.c  blur.c  cldmask.c  cmphomod.c  colorcoords.c  colorcoordsf.c  colormesh.c  colormesh_projective.c  coordconvert.c  coordconvert.h  crop.c  disp2ply.c  disp_to_h.c  disp_to_h_projective.c  downsa.c  drawsegment.c  extrapolators.c  fail.c  fancy_image.c  fancy_image.h  fftconvolve.c  fragments.c  gblur.c  (+66 more)
c/homography/: CMakeLists.txt  Makefile  build.sh  iio.c  linalg.c  linalg.h  main.cpp  pickopt.h  tiff_octaves_rw.c
c/homography/LibHomography/: Homography.cpp  Homography.h  Splines.cpp  Splines.h
c/homography/LibImages/: LibImages.cpp  LibImages.h
c/homography/Utilities/: Memory.cpp  Memory.h  Parameters.cpp  Parameters.h  Time.cpp  Time.h  Utilities.cpp  Utilities.h
c/homography/test_data/: homography.txt  identity.txt  input_uint16.tif  input_uint16_tiled.tif
c/monasse_refactored/: CMakeLists.txt
c/monasse_refactored/homography/: CMakeLists.txt  homography.cpp
c/monasse_refactored/libIIO/: CMakeLists.txt  FindOPENEXR.cmake  README  fes  fesEXR  fesclang  fesicc  fesmac  fessun  iio.c  iio.h  iio.html  iio.status  iio.txt  iioConfig.cmake.in  iio_api.h  iio_split.c  iio_test.c  iio_test_named.c  iio_unsplit.c  iio_utest.c
c/monasse_refactored/libIO/: CMakeLists.txt  draw.c  draw.h  iio_wrap.h  io_png.c  io_png.h  io_tiff.c  io_tiff.h  nan.h
c/monasse_refactored/libLWImage/: CMakeLists.txt  LWImage.cpp  LWImage.h
c/monasse_refactored/libMatch/: CMakeLists.txt  match.cpp  match.h
c/monasse_refactored/libNumerics/: CMakeLists.txt  homography.cpp  homography.h  matrix.cpp  matrix.h  numerics.cpp  numerics.h  vector.cpp
c/monasse_refactored/libTransform/: CMakeLists.txt  TransformSize.cpp  TransformSize.h  gauss_convol.cpp  gauss_convol.h  map_image.cpp  map_image.h  spline.cpp  spline.h
c/monasse_refactored/minDistortionRectify/: CMakeLists.txt  rectify_main.cpp  rectify_mindistortion.cpp  rectify_mindistortion.hpp  show_epipoles.cpp  utils.cpp  utils.h
c/monasse_refactored/sift/: CMakeLists.txt  demo_lib_sift.cpp  demo_lib_sift.h  demo_sift.cpp  domain.cpp  domain.h  filter.cpp  filter.h  library.cpp  library.h  main_sift_keypoints.cpp  splines.cpp  splines.h
c/msmw/: CMakeLists.txt  main.cpp
c/msmw/LibImages/: LibImages.cpp  LibImages.h
c/msmw/LibMSMW/: ConnectedComponents.cpp  LibMSMW.cpp  LibMSMW.h  UtilitiesMSMW.cpp  UtilitiesMSMW.h
c/msmw/Utilities/: Parameters.cpp  Parameters.h  Time.cpp  Time.h  Utilities.cpp
c/msmw/test_data/: a.tif  b.tif
c/sift/: CMakeLists.txt  Makefile  README.txt  Time.cpp  Time.h  fancy_image.c  fancy_image.h  iio.h  main.c  matching.c  matching.cpp  pickopt.c  pickopt.h  sift4ctypes.cpp  sift_roi.c  sift_roi.cpp  timing.c  timing.h
c/sift/LibImages/: LibImages.cpp  LibImages.h
c/sift/LibSSE/: LibSSE.cpp  LibSSE.h
c/sift/LibSift/: KeyPoint.cpp  KeyPoint.h  LibSift.cpp  LibSift.h  Octave.cpp  Octave.h  ScaleSpace.cpp  ScaleSpace.h
c/sift/Utilities/: Parameters.cpp  Parameters.h  Time.cpp  Time.cpp.bak  Time.h  Time.h.bak  Utilities.cpp  Utilities.h
c/sift/sift_anatomy_20141201/: Makefile  README.txt  example.c  lib_description.h  lib_discrete.c  lib_discrete.h  lib_io_scalespace.h  lib_keypoint.c  lib_keypoint.h  lib_matching.c  lib_matching.h  lib_scalespace.c  lib_scalespace.h  lib_sift.c  lib_sift.h  lib_sift_anatomy.c  lib_sift_anatomy.h  lib_util.c  lib_util.h  sift_cli.c  sift_cli_default.c
c/sift/test_data/: img_tiled.tif
cicd/: script.sh
ipynb/: experiments_miss_decembre_2013.ipynb  fountain_fusion_julie.ipynb  manual_std_chain.ipynb  pleiades_fusion_julie.ipynb  toulouse_pipeline_by_hand.ipynb
pleiades_data/: create_links.sh  ep_ranking.txt  idata_0009_MTF_89x89.tif
python/: block_matching.py  common.py  config.py  disp_to_h_projective.py  estimation.py  evaluate_perspective_approximations.py  evaluation.py  fusion.py  geographiclib.py  global_params.py  globalfinalization.py  globalvalues.py  homography_cropper.py  initialization.py  masking.py  parallel.py  pointing_accuracy.py  preprocess.py  process.py  projective_model.py  rectification.py  rectification_std.py  rpc_crop.py  rpc_model.py  rpc_utils.py  sift.py  srtm.py  tee.py  test_estimation.py  test_evaluation.py  tile_composer.py  triangulation.py  viewGL.py  viewGL_2.py  visualisation.py
s2p/: __init__.py  block_matching.py  cli.py  common.py  config.py  estimation.py  evaluation.py  fusion.py  geographiclib.py  image_coordinates_to_coordinates.py  initialization.py  masking.py  parallel.py  piio  ply.py  pointing_accuracy.py  rasterization.py  rectification.py  rpc_model.py  rpc_utils.py  sift.py  test_estimation.py  test_evaluation.py  tile.py  triangulation.py  viewGL.py  visualisation.py
s2p_aidash/: __init__.py  block_matching.py  cli.py  common.py  config.py  evaluation.py  fusion.py  initialization.py  masking.py  parallel.py  ply.py  pointing_accuracy.py  rectification.py  rpc_utils.py  sift.py  triangulation.py  visualisation.py
s2plib/: block_matching.py  common.py  config.py  estimation.py  evaluate_perspective_approximations.py  fusion.py  geographiclib.py  homography_cropper.py  initialization.py  masking.py  parallel.py  pointing_accuracy.py  projective_model.py  rasterization.py  rectification.py  rpc_model.py  rpc_utils.py  sift.py  srtm.py  tee.py  test_estimation.py  test_evaluation.py  (+2 more)
(+394 files in other folders)
