CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Stereo)

IF(UNIX)
    SET(BUILD_SHARED_LIBS OFF CACHE BOOL "Dynamic libraries")
ENDIF(UNIX)

# Use the local libraries and do not check the system libaries
SET(WITH_LOCAL_ZLIB OFF CACHE BOOL "Use local zlib")
SET(WITH_LOCAL_LIBPNG OFF CACHE BOOL "Use local libpng")
SET(WITH_LOCAL_LIBTIFF OFF CACHE BOOL "Use local libtiff")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)

set(CMAKE_BUILD_TYPE Release)

ADD_SUBDIRECTORY(libIIO)
ADD_SUBDIRECTORY(libIO)
ADD_SUBDIRECTORY(libLWImage)
ADD_SUBDIRECTORY(libMatch)
ADD_SUBDIRECTORY(libNumerics)
ADD_SUBDIRECTORY(libTransform)
ADD_SUBDIRECTORY(homography)
ADD_SUBDIRECTORY(sift)
ADD_SUBDIRECTORY(minDistortionRectify)
#ADD_SUBDIRECTORY(utils)

INSTALL(FILES CMakeLists.txt DESTINATION src)
