CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(libIO)

SET(SRC io_tiff.c io_tiff.h
        io_png.c io_png.h
        draw.c draw.h
        nan.h)

ADD_LIBRARY(IO ${SRC})

IF(NOT WITH_LOCAL_LIBTIFF)
    FIND_PACKAGE(TIFF)
ENDIF(NOT WITH_LOCAL_LIBTIFF)
IF(NOT WITH_LOCAL_LIBPNG)
    FIND_PACKAGE(PNG)
ENDIF(NOT WITH_LOCAL_LIBPNG)

IF(NOT TIFF_FOUND)
    SET(TIFF_INCLUDE_DIR ../3rdParty/tiff)
    SET(TIFF_LIBRARIES tiff)
ENDIF(NOT TIFF_FOUND)

IF(NOT PNG_FOUND)
    SET(PNG_INCLUDE_DIR ../3rdParty/png)
    SET(PNG_LIBRARIES png)
ENDIF(NOT PNG_FOUND)

ADD_DEFINITIONS(${PNG_DEFINITIONS})

INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

TARGET_LINK_LIBRARIES(IO ${TIFF_LIBRARIES} ${PNG_LIBRARIES})

IF(UNIX)
    SET_TARGET_PROPERTIES(IO PROPERTIES
                          COMPILE_FLAGS "-Wall -Wextra -Werror")
ENDIF(UNIX)

INSTALL(FILES CMakeLists.txt ${SRC} DESTINATION src/libIO)
